# chat-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  todo.md
.github/workflows/: ci.yml
crates/chat/: Cargo.toml
crates/chat-server/: Cargo.toml
crates/chat-server/migrations/: 0001_initial.sql  0002_authentication.sql  0003_server_admission.sql  0004_oidc_login_capacity.sql
crates/chat-server/src/: app.rs  auth.rs  command.rs  config.rs  http.rs  lib.rs  main.rs  operator.rs  realtime.rs  server.rs  sqlite.rs  telemetry.rs
crates/chat-server/src/auth/: admission.rs  cookie.rs  oidc.rs  session.rs  store.rs
crates/chat-server/src/http/: authentication.rs  conversation.rs  problem.rs  realtime.rs  representation.rs  session.rs
crates/chat-server/src/realtime/: connection.rs  hub.rs  protocol.rs  tests.rs
crates/chat-server/src/sqlite/: read.rs  row.rs  write.rs
crates/chat-server/tests/: sqlite_store.rs
crates/chat/src/: add_member.rs  chat.rs  conversation.rs  create_conversation.rs  create_user.rs  event.rs  get_conversation.rs  get_message.rs  id.rs  lib.rs  list_conversations.rs  list_members.rs  list_messages.rs  membership.rs  message.rs  post_message.rs  remove_member.rs  store.rs  user.rs
crates/chat/tests/: core_use_cases.rs  get_message.rs  post_message.rs  store_contracts.rs
docs/: authentication-protocol.md  e2e-verification-report-2026-06-22.md  e2e-verification.md  http-chat-api-plan.md  http-chat-mutations-plan.md  pre-e2e-audit-plan.md  realtime-delivery-plan.md  realtime-e2e-verification-report-2026-06-23.md  realtime-e2e-verification.md  server-admission-plan.md  server-foundation.md  sqlite-persistence.md  web-client-initial-implementation-plan.md  web-client-plan.md
web/: README.md  index.html  package.json  pnpm-lock.yaml
web/e2e/: realtime.html
web/src/: app-shell.ts  main.ts
web/src/api/: client.ts  problems.ts  types.ts
web/src/components/: chat-login.ts  connection-status.ts
web/src/realtime/: protocol.ts  socket.ts
web/src/state/: conversation-store.ts  message-store.ts  session-store.ts
web/src/styles/: base.css  layout.css  tokens.css
