[workspace]
resolver = "3"
members = ["crates/chat", "crates/chat-server"]
default-members = ["crates/chat-server"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
repository = "https://github.com/barn0w1/chat-rs"

[workspace.dependencies]
chat = { path = "crates/chat" }
sqlx = { version = "0.9.0", default-features = false, features = [
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite-bundled",
] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
