[workspace]
resolver = "3"
members = ["crates/chat", "crates/chat-server"]
default-members = ["crates/chat-server"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
repository = "https://github.com/barn0w1/chat-rs"

[workspace.dependencies]
axum = { version = "0.8.9", default-features = false, features = [
    "http1",
    "tokio",
    "tracing",
] }
chat = { path = "crates/chat" }
sqlx = { version = "0.9.0", default-features = false, features = [
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite-bundled",
] }
tokio = { version = "1.52.3", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tower-http = { version = "0.6.11", default-features = false, features = [
    "trace",
] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
