[workspace]
resolver = "3"
members = ["crates/chat", "crates/chat-server"]
default-members = ["crates/chat-server"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
repository = "https://github.com/barn0w1/chat-rs"

[workspace.dependencies]
axum = { version = "0.8.9", default-features = false, features = [
    "http1",
    "json",
    "query",
    "tokio",
    "tracing",
] }
base64 = "0.22.1"
chat = { path = "crates/chat" }
cookie = "0.18.1"
getrandom = "0.4.3"
openidconnect = { version = "4.0.1", default-features = false, features = [
    "reqwest",
    "rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
sqlx = { version = "0.9.0", default-features = false, features = [
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite-bundled",
] }
tokio = { version = "1.52.3", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tower-http = { version = "0.6.11", default-features = false, features = [
    "trace",
] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
subtle = "2.6.1"
url = "2.5.8"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
