[package]
name = "chat-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
chat.workspace = true
sqlx.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
