[package]
name = "chat-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
axum.workspace = true
chat.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
tower = { version = "0.5.3", features = ["util"] }

[lints]
workspace = true
