[package]
name = "chat-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
axum.workspace = true
base64.workspace = true
chat.workspace = true
cookie.workspace = true
getrandom.workspace = true
openidconnect.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
subtle.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
futures-util = "0.3.32"
tempfile = "3.23.0"
tokio-tungstenite = "0.29.0"
tower = { version = "0.5.3", features = ["util"] }

[lints]
workspace = true
